# Kala-Bot

./: .gitignore  .replit  README.md  keys.json  main.py  pyproject.toml  usage.sh  utils.py
commands/: anime.py  banned.json  help.py  mod.py  owneronly.py  quran.py  schedule.py  server.py  utils.py
commands/Error/: error.py
commands/Fandom/: dark_souls.py  fandom.py  sexo.py
